--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=java
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.username=hari
 spring.datasource.password=9384
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
 
 # PostgreSQL dialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
